fix: absolute is better suited than fixed if deckdeckgo is included in a not full screen page on Safari

--- a/src/components/deck/deckdeckgo-deck/deckdeckgo-deck.scss
+++ b/src/components/deck/deckdeckgo-deck/deckdeckgo-deck.scss
@@ -1,7 +1,7 @@
 div.deckgo-deck {
   display: flex;
 
-  position: fixed;
+  position: absolute;
   top: 0;
   bottom: 0;
 
@@ -19,7 +19,7 @@ div.deckgo-deck {
 }
 
 div.deckgo-pager {
-  position: fixed;
+  position: absolute;
   bottom: 0;
   left: 0;
 }
